fix low contrast

--- a/styles.css
+++ b/styles.css
@@ -355,7 +355,11 @@
 .datepicker .table-condensed {
     min-width: 250px;
     min-height: 240px;
-    background: var(--theme-lightest);
+    /*background: var(--theme-lightest);*/
+}
+
+.datepicker table tr td.new, .datepicker table tr td.old {
+    color: blue;
 }
 
 /* intros */
